# ck-tutorial

./: .gitignore  CMakeLists.txt  README.md  setup.py
examples/: check_machete_mm.py  check_machete_mm_template.py  check_ops.py  check_prepackB.py  generate_tune_parameter_list.py  test_correctness.py  torch_scaled_mm_example.py  tune_machete_mm_template.py  tune_machete_mm_template_kbatch.py  tune_machete_mm_template_kbatch_manual.py  utils.py  validate_machete_mm_template_kbatch_heuristic.py  validate_machete_mm_template_kbatch_heuristic_from_csv.py  weight_shapes.py
notes/: fp8datatype.md  gridwisegemmmultid_xdl_cshuffle_v3_b_preshuffle.md
notes/pshuffle_gemm/: device_gemm_multiple_d.hpp  device_gemm_multiple_d_xdl_cshuffle_v3_b_preshuffle_hip.hpp  gridwise_gemm_xdl_cshuffle_v3_multi_d_b_preshuffle.hpp
torch_ck/kernels/: generate.py  machete_mm.cpp  machete_mm_hip.cpp  machete_ops.h  machete_prepack.cpp  machete_prepack.h  machete_prepack_hip.cpp  pybind.cpp
torch_ck/kernels/generated_kernels/: generate_files.py  machete_common.h  machete_mm_kernel.cpp.jinja  machete_mm_kernel.h.jinja  machete_mm_kernel_launcher.cpp.jinja  machete_mm_out_kernel_ops_list.json
torch_ck/kernels/machete_kernels/: machete_256_16x64x256_16x16_1x1_16x16_intrawave_v3_2.cpp  machete_256_16x64x256_16x16_1x1_16x16_intrawave_v3_2_hip.cpp  machete_common.h  machete_common_hip.h  machete_kernel_1.cpp  machete_kernel_manifest.h
torch_ck/kernels/utils/: GridwiseGemmMultiD_xdl_cshuffle_v3_b_preshuffle.py  check_validity.py  mfmaselector.py  (+1 more)
torch_int/kernels/: bmm.cpp  pybind.cpp
(+1 files in other folders)
